prepare for papermc 1.19.2